flux/istio/ns-istio-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: istio
  annotations:
    flux.weave.works/ignore: 'true'
  name: istio-system
